[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.30"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", tag = "v0.1", features = ["full"] }
radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", rev = "adc39b020a876a0325b977c295bda1b10175720a", features = ["full"] }

